/**
 * Interfaz que define el comportamiento de un cirujano
 */
public interface ICirujano {
    void operar();
}
